--- a/templates/stoplight-initiative.hbs
+++ b/templates/stoplight-initiative.hbs
@@ -1,12 +1,12 @@
 <div class="stoplight-tracker">
   <div class="tracker-zones">
     <!-- Green Zone: I want to go next -->
-    <div class="zone zone-green" data-zone="green">
+    <div class="zone zone-green" data-zone="green" data-drop-zone="green">
       <div class="zone-header">
         <i class="fas fa-circle"></i>
         <span>Ready to Go</span>
       </div>
-      <div class="zone-content" data-drop-zone="green">
+      <div class="zone-content">
         {{#each green}}
           <div class="combatant-entry" data-combatant-id="{{this.id}}" draggable="true">
             <img src="{{this.img}}" alt="{{this.name}}" class="combatant-img" />
@@ -19,12 +19,12 @@
     </div>
 
     <!-- Yellow Zone: Default/neutral state -->
-    <div class="zone zone-yellow" data-zone="yellow">
+    <div class="zone zone-yellow" data-zone="yellow" data-drop-zone="yellow">
       <div class="zone-header">
         <i class="fas fa-circle"></i>
         <span>Waiting</span>
       </div>
-      <div class="zone-content" data-drop-zone="yellow">
+      <div class="zone-content">
         {{#each yellow}}
           <div class="combatant-entry" data-combatant-id="{{this.id}}" draggable="true">
             <img src="{{this.img}}" alt="{{this.name}}" class="combatant-img" />
