--- a/templates/stoplight-initiative.hbs
+++ b/templates/stoplight-initiative.hbs
@@ -4,11 +4,11 @@
     <div class="zone zone-green" data-zone="green" data-drop-zone="green">
       <div class="zone-header">
         <i class="fas fa-circle"></i>
-        <span>Ready to Go</span>
+        <span>Want to Go</span>
       </div>
       <div class="zone-content">
         {{#each green}}
-          <div class="combatant-entry" data-combatant-id="{{this.id}}" draggable="true">
+          <div class="combatant-entry {{#if this.isCurrent}}current-turn{{/if}}" data-combatant-id="{{this.id}}" draggable="true">
             <img src="{{this.img}}" alt="{{this.name}}" class="combatant-img" />
             <span class="combatant-name">{{this.name}}</span>
           </div>
@@ -26,7 +26,7 @@
       </div>
       <div class="zone-content">
         {{#each yellow}}
-          <div class="combatant-entry" data-combatant-id="{{this.id}}" draggable="true">
+          <div class="combatant-entry {{#if this.isCurrent}}current-turn{{/if}}" data-combatant-id="{{this.id}}" draggable="true">
             <img src="{{this.img}}" alt="{{this.name}}" class="combatant-img" />
             <span class="combatant-name">{{this.name}}</span>
           </div>
@@ -44,7 +44,7 @@
       </div>
       <div class="zone-content">
         {{#each red}}
-          <div class="combatant-entry" data-combatant-id="{{this.id}}">
+          <div class="combatant-entry {{#if this.isCurrent}}current-turn{{/if}}" data-combatant-id="{{this.id}}">
             <img src="{{this.img}}" alt="{{this.name}}" class="combatant-img" />
             <span class="combatant-name">{{this.name}}</span>
           </div>
