--- a/templates/stoplight-initiative.hbs
+++ b/templates/stoplight-initiative.hbs
@@ -37,14 +37,14 @@
     </div>
 
     <!-- Red Zone: Already gone this round -->
-    <div class="zone zone-red" data-zone="red">
+    <div class="zone zone-red" data-zone="red" data-drop-zone="red">
       <div class="zone-header">
         <i class="fas fa-circle"></i>
         <span>Already Acted</span>
       </div>
       <div class="zone-content">
         {{#each red}}
-          <div class="combatant-entry {{#if this.isCurrent}}current-turn{{/if}}" data-combatant-id="{{this.id}}">
+          <div class="combatant-entry {{#if this.isCurrent}}current-turn{{/if}}" data-combatant-id="{{this.id}}" draggable="true">
             <img src="{{this.img}}" alt="{{this.name}}" class="combatant-img" />
             <span class="combatant-name">{{this.name}}</span>
           </div>
