--- a/templates/stoplight-initiative.hbs
+++ b/templates/stoplight-initiative.hbs
@@ -1,4 +1,8 @@
 <div class="stoplight-tracker">
+  <div class="tracker-header-bar">
+    <i class="fas fa-grip-horizontal drag-handle"></i>
+    <span class="tracker-title">Stoplight Initiative</span>
+  </div>
   <div class="tracker-zones">
     <!-- Green Zone: I want to go next -->
     <div class="zone zone-green" data-zone="green" data-drop-zone="green">
