--- a/templates/stoplight-initiative.hbs
+++ b/templates/stoplight-initiative.hbs
@@ -1,5 +1,8 @@
 <div class="stoplight-tracker">
-  <i class="fas fa-grip-horizontal drag-handle"></i>
+  <div class="tracker-controls">
+    <i class="fas fa-grip-horizontal drag-handle"></i>
+    <i class="fas fa-chevron-left toggle-visibility"></i>
+  </div>
   <div class="tracker-zones">
     <!-- Green Zone: I want to go next -->
     <div class="zone zone-green" data-zone="green" data-drop-zone="green">
